--- a/android-ui/AndroidUI/app/src/main/res/layout/activity_locations.xml
+++ b/android-ui/AndroidUI/app/src/main/res/layout/activity_locations.xml
@@ -1,11 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android">
     <data>
-
+        <variable name="newCheckIn" type="edu.oregonstate.cs496.merdlera.androidui.main.locations.CheckIn"></variable>
     </data>
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:hint="Message"
+            android:text="@={newCheckIn.comment}" />
+        <Button
+            android:text="Check In"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:onClick="@{() -> null}" />
     </LinearLayout>
 </layout>
