--- a/android-ui/AndroidUI/app/src/main/res/layout/activity_locations.xml
+++ b/android-ui/AndroidUI/app/src/main/res/layout/activity_locations.xml
@@ -9,13 +9,13 @@
         android:layout_height="match_parent">
         <EditText
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:hint="Message"
             android:text="@={newCheckIn.comment}" />
         <Button
             android:text="Check In"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:onClick="@{() -> null}" />
+            android:onClick="onSubmit" />
     </LinearLayout>
 </layout>
