--- a/android-ui/AndroidUI/app/src/main/res/layout/activity_locations.xml
+++ b/android-ui/AndroidUI/app/src/main/res/layout/activity_locations.xml
@@ -7,6 +7,10 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@{newCheckIn.comment}" />
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -17,5 +21,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:onClick="onSubmit" />
+
+        <ListView
+            android:id="@+id/listview"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
     </LinearLayout>
 </layout>
