--- a/android-oauth/AndroidOAuth/app/src/main/res/layout/activity_main.xml
+++ b/android-oauth/AndroidOAuth/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-        <Button
+        <com.google.android.gms.common.SignInButton
             android:id="@+id/sign_in_button"
             android:text="Sign In"
             android:layout_width="wrap_content"
